--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>Retail-banking</title>
-  <base href="/retailbanking/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="description" content="bank, finnance, fund transfer">
   <!-- <script src="src/polyfill.js"></script> -->
 
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.d0ac8c8d353499866999.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.e857bae1c2e91d04d698.js" defer></script><script src="polyfills-es5.51c273a9a9800d1fc698.js" nomodule defer></script><script src="polyfills.34f82a53cb29240b2c0c.js" defer></script><script src="main.0650814c5f18d7c82047.js" defer></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.002583b083fcd5fecc25.js" defer></script><script src="polyfills-es5.99f0de006116cc798bf7.js" nomodule defer></script><script src="polyfills.45f5fdaa42b465def5a6.js" defer></script><script src="main.8802f7f0c428ba3838ad.js" defer></script></body>
 </html>
