--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Retail-banking</title>
-  <base href="/retailbanking/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -16,5 +16,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.002583b083fcd5fecc25.js" defer></script><script src="polyfills-es5.99f0de006116cc798bf7.js" nomodule defer></script><script src="polyfills.45f5fdaa42b465def5a6.js" defer></script><script src="main.8802f7f0c428ba3838ad.js" defer></script></body>
+<script src="runtime.b6f2983dd104f2887512.js" defer></script><script src="polyfills-es5.99f0de006116cc798bf7.js" nomodule defer></script><script src="polyfills.45f5fdaa42b465def5a6.js" defer></script><script src="main.0602efcac480cac03bbb.js" defer></script></body>
 </html>
